DoanhHN - update email reply

--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Models\SubCategoryModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utility\EmailMergingHelper.cs" />
     <Compile Include="Utility\EmailServiceHelper.cs" />
     <Compile Include="Utility\EncryptionHelper.cs" />
   </ItemGroup>
