Big Update Again

--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -173,76 +173,67 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Entities\Account.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\Category.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entities\ConstructionEntity.Context.cs">
+    <Compile Include="Entities\ConstructionSite.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ConstructionEntity.Context.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entities\ConstructionEntity.cs">
+    <Compile Include="Entities\ConstructionSite.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entities\ConstructionEntity.Designer.cs">
+    <Compile Include="Entities\ConstructionSite.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ConstructionEntity.edmx</DependentUpon>
+      <DependentUpon>ConstructionSite.edmx</DependentUpon>
     </Compile>
     <Compile Include="Entities\Customer.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\EmailTemplate.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\GetHashTokenByEmailAddress_Result.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\LoginByEmailAdress_Result.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\MergeField.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\Order.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\OrderDetail.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\Product.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\ProductDetail.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\Request.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\Role.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\Shipper.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities\sp_helpdiagrams_Result.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\Supplier.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities\sysdiagram.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\SystemVariable.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+      <DependentUpon>ConstructionSite.tt</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -331,15 +322,15 @@
     <Content Include="Content\slippry.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
-    <Content Include="Entities\ConstructionEntity.Context.tt">
+    <Content Include="Entities\ConstructionSite.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ConstructionEntity.edmx</DependentUpon>
-      <LastGenOutput>ConstructionEntity.Context.cs</LastGenOutput>
+      <DependentUpon>ConstructionSite.edmx</DependentUpon>
+      <LastGenOutput>ConstructionSite.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Entities\ConstructionEntity.tt">
+    <Content Include="Entities\ConstructionSite.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ConstructionEntity.edmx</DependentUpon>
-      <LastGenOutput>ConstructionEntity.cs</LastGenOutput>
+      <DependentUpon>ConstructionSite.edmx</DependentUpon>
+      <LastGenOutput>ConstructionSite.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\Admin\customer.js" />
     <Content Include="Scripts\Admin\js\calendar.js" />
@@ -1429,12 +1420,12 @@
     <Content Include="Content\font\slick\slick.eot" />
     <Content Include="Content\font\slick\slick.ttf" />
     <Content Include="Content\font\slick\slick.woff" />
-    <EntityDeploy Include="Entities\ConstructionEntity.edmx">
+    <EntityDeploy Include="Entities\ConstructionSite.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ConstructionEntity.Designer.cs</LastGenOutput>
+      <LastGenOutput>ConstructionSite.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Entities\ConstructionEntity.edmx.diagram">
-      <DependentUpon>ConstructionEntity.edmx</DependentUpon>
+    <Content Include="Entities\ConstructionSite.edmx.diagram">
+      <DependentUpon>ConstructionSite.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
     <Content Include="Scripts\dlMenu\custom.dlmenu.js" />
