--- a/GenerateDatabase/GenerateDatabase.csproj
+++ b/GenerateDatabase/GenerateDatabase.csproj
@@ -111,16 +111,7 @@
     <Compile Include="Entity\Shipper.cs">
       <DependentUpon>ConstructionEntity.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entity\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\sp_helpdiagrams_Result.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
-    </Compile>
     <Compile Include="Entity\Supplier.cs">
-      <DependentUpon>ConstructionEntity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\sysdiagram.cs">
       <DependentUpon>ConstructionEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="Entity\SystemVariable.cs">
@@ -328,6 +319,8 @@
     <Content Include="scripts\tinymce\themes\modern\theme.min.js" />
     <Content Include="scripts\tinymce\tinymce.js" />
     <Content Include="scripts\tinymce\tinymce.min.js" />
+    <Content Include="Xml\merge-fields.xml" />
+    <Content Include="Xml\OrderConfirmationEmailTemp.txt" />
     <Content Include="Xml\parent-category.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -335,6 +328,7 @@
     <Content Include="Xml\product.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Xml\ReplyRequestEmailTemplate.txt" />
     <Content Include="Xml\user.xml" />
   </ItemGroup>
   <ItemGroup />
