--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -163,6 +163,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Code\Helper.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -266,10 +267,12 @@
     <Compile Include="Models\Constant.cs" />
     <Compile Include="Models\EmailDeliveryModel.cs" />
     <Compile Include="Models\IndexViewModel.cs" />
+    <Compile Include="Models\PostCommentModel.cs" />
     <Compile Include="Models\ProductIndexModel.cs" />
     <Compile Include="Models\RequestContactModel.cs" />
     <Compile Include="Models\ShowcaseProductDetail.cs" />
     <Compile Include="Models\SubCategoryModel.cs" />
+    <Compile Include="Models\SystemInformationViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utility\EmailMergingHelper.cs" />
@@ -300,24 +303,26 @@
     <Content Include="Content\full-slider.css" />
     <Content Include="Content\fullwidth-list\component.css" />
     <Content Include="Content\fullwidth-list\default.css" />
+    <Content Include="Content\Image\about_image.jpg" />
     <Content Include="Content\Image\ajax-loader.gif" />
+    <Content Include="Content\Image\contact_image.jpg" />
+    <Content Include="Content\Image\empty-cart.png" />
     <Content Include="Content\Image\image_placeholder.jpg" />
     <Content Include="Content\Image\logo.png" />
-    <Content Include="Content\Image\slider\1.png" />
-    <Content Include="Content\Image\slider\2.png" />
-    <Content Include="Content\Image\slider\3.png" />
-    <Content Include="Content\Image\slider\4.png" />
-    <Content Include="Content\Image\slider\arrows.png" />
-    <Content Include="Content\Image\slider\bg.png" />
-    <Content Include="Content\Image\slider\ImageAttribution.txt" />
-    <Content Include="Content\Image\slider\waves.gif" />
+    <Content Include="Content\Image\showcase_image.jpg" />
+    <Content Include="Content\Image\slider\slider-1.jpg" />
+    <Content Include="Content\Image\slider\slider-2.jpg" />
+    <Content Include="Content\Image\slider\slider-3.jpg" />
+    <Content Include="Content\Image\slider\slider-4.jpg" />
+    <Content Include="Content\Image\slider\slider-5.jpg" />
     <Content Include="Content\Image\square-image-placeholder.png" />
+    <Content Include="Content\Image\viewcategory_image.jpg" />
     <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\owl.carousel\AjaxLoader.gif" />
     <Content Include="Content\owl.carousel\grabbing.png" />
     <Content Include="Content\owl.carousel\owl.carousel.css" />
     <Content Include="Content\owl.carousel\owl.theme.css" />
     <Content Include="Content\owl.carousel\owl.transitions.css" />
-    <Content Include="Content\parallax_slider.css" />
     <Content Include="Content\slick-theme.css" />
     <Content Include="Content\slick.css" />
     <Content Include="Content\slippry.css" />
@@ -345,6 +350,7 @@
     <Content Include="Scripts\Admin\supplier.js" />
     <Content Include="Scripts\Admin\user.js" />
     <Content Include="Scripts\bootbox.min.js" />
+    <Content Include="Scripts\bootstrap-collapse.js" />
     <Content Include="Scripts\bootstrap-select.js" />
     <Content Include="Scripts\Common\account.js" />
     <Content Include="Scripts\Common\main.js" />
@@ -1417,7 +1423,6 @@
     <Content Include="Content\dlMenu\fonts\icomoon.ttf" />
     <Content Include="Content\dlMenu\fonts\icomoon.woff" />
     <Content Include="Content\bootstrap-select\bootstrap-select.css.map" />
-    <Content Include="Content\Image\slider\Thumbs.db" />
     <Content Include="Content\font\slick\slick.eot" />
     <Content Include="Content\font\slick\slick.ttf" />
     <Content Include="Content\font\slick\slick.woff" />
@@ -1635,6 +1640,7 @@
     <Content Include="Scripts\tinymce\tinymce.min.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
+    <Content Include="Scripts\bootstrap-transition.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="SQL Scripts\DB_Initial.sql" />
     <Content Include="Web.config">
