--- a/GenerateDatabase/App.config
+++ b/GenerateDatabase/App.config
@@ -8,7 +8,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
-  <connectionStrings><add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entity.ConstructionEntity.csdl|res://*/Entity.ConstructionEntity.ssdl|res://*/Entity.ConstructionEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLExpress;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=yuiop67890);multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    
+  <add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entity.ConstructionEntity.csdl|res://*/Entity.ConstructionEntity.ssdl|res://*/Entity.ConstructionEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLExpress;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=yuiop67890);multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
